fixed navbar overlap

--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@
     justify-content: center;
     align-items: center;
     background-size: cover;
+    padding: 100px;
 }
 
 
@@ -569,4 +570,8 @@
 html, body {
     overflow-x: hidden;
     width: 100%;
+}
+
+body{
+    padding-top:90px ;
 }
